--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 }
 
