--- a/style.css
+++ b/style.css
@@ -294,6 +294,7 @@
         align-content: center;
         align-items: center;
         width: 90%;
+        margin-bottom: 100px;
     }
     .image-section img {
         width: 100%;
